# image-optimizer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  rsaudit.yml  rsbuild.yml  rsformat.yml  rstest.yml
src/: command_parser.rs  image_optimizer.rs  main.rs  resize_image.rs  resize_images.rs
