[package]
name = "image-optimizer"
version = "0.5.0"
authors = ["Daniel Naschberger <daniel@naschi.at>"]
edition = "2021"
description = "A tool to optimize images for web."
readme = "README.md"
repository = "https://github.com/naschidaniel/image-optimizer/"
license = "GPL-3.0"


[dependencies]
clap = { version = "3.2.23", features = ["derive"] }
image = "0.24.4"
glob = "0.3.0"
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"
tempfile = "3.3.0"
webp = "0.2.2"
