[package]
name = "image-optimizer"
version = "0.5.0"
authors = ["Daniel Naschberger <daniel@naschi.at>"]
edition = "2021"
description = "A tool to optimize images for web."
readme = "README.md"
repository = "https://github.com/naschidaniel/image-optimizer/"
license = "GPL-3.0"


[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
image = "0.24.8"
glob = "0.3.1"
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"
tempfile = "3.9.0"
webp = "0.2.6"
